style:alignment issues

--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -57,6 +57,7 @@
         width: 80%;
     }
     .header__logo{
+        font-size:1.5rem;
         margin:0 0.5rem;
     }
     .option{
